--- a/src/components/LanguageDropdown.css
+++ b/src/components/LanguageDropdown.css
@@ -1,23 +1,25 @@
-.language-dropdown {
+
+.language-dropdown-menu {
   position: absolute;
-  top: 40px;
+  top: 100%;
   right: 0;
-  background-color: white;
+  background-color: #131921;
   border: 1px solid #ccc;
-  padding: 10px;
-  z-index: 9999;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  z-index: 1000;
+  width: 150px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  text-emphasis-color:black;
 }
 
-.language-dropdown button {
-  display: block;
-  background: none;
-  border: none;
-  padding: 8px 10px;
-  width: 100%;
-  text-align: left;
+.language-dropdown-menu li {
+  padding: 10px 15px;
   cursor: pointer;
+  font-size: 14px;
 }
-.language-dropdown button:hover {
-  background-color: #f0f0f0;
+
+.language-dropdown-menu li:hover {
+  background-color: #f08804;
 }
