--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,16 +1,20 @@
 /* General Reset and Layout */
 body {
-  padding-top: 100px;
+  padding-top: 100px; /* match header height */
+  overflow-x: hidden;
 }
 
 .amazon-header {
   background-color: #131921;
-  padding: 10px 20px;
+  
   color: white;
   display: flex;
   flex-direction: column;
   gap: 10px;
   width: 100%;
+  position: relative;
+  z-index: 1000;
+
 }
 
 .nav-top {
@@ -116,7 +120,7 @@ body {
   padding: 5px 10px;
   cursor: pointer;
   position: relative;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .lang-box img {
@@ -255,19 +259,51 @@ body.dark .modal-content {
 /* Shown when burger is toggled */
 .nav-content.open {
   display: flex;
+    position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background-color: #131921;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  position: relative;
+  
 }
+
+.menu-backdrop {
+  position: fixed;
+  top: 60px;
+  left: 0;
+  width: 100vw;
+  height: calc(100vh - 60px);
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1500;
+}
+
 
 /* Default hidden for mobile menu */
 .nav-content {
   display: none;
   flex-direction: column;
   background-color: #131921;
-  padding: 10px;
+  padding:0 10px;
   gap: 10px;
   width: 100%;
+  
+  color: white;
+  padding: 0 10px;
+  cursor: pointer;
 }
 
 /* Desktop override */
+@media (min-width: 768px) {
+  body {
+  padding-top: 100px; /* match header height */
+  overflow-x: hidden;
+}
+}
 @media (min-width: 768px) {
   .nav-content {
     display: flex !important;
@@ -277,6 +313,7 @@ body.dark .modal-content {
     background-color: transparent;
     padding: 0;
   }
+  
 }
 
 /* Responsive Design */
@@ -284,7 +321,6 @@ body.dark .modal-content {
   .mobile-menu-toggle {
     display: none;
   }
-
   .nav-items {
     display: flex !important;
     flex-direction: row;
